--- a/EmojiPacker/MainWindow.xaml
+++ b/EmojiPacker/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="EmojiPacker.MainWindow"
+﻿<Window x:Name="MainPackWindow" x:Class="EmojiPacker.MainWindow"
                             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
                             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -12,7 +12,7 @@
                             TextElement.FontSize="13"
                             TextOptions.TextFormattingMode="Ideal" 
                             TextOptions.TextRenderingMode="Auto"        
-                            Background="{DynamicResource MaterialDesignPaper}" FontFamily="Segoe UI Semibold" WindowStartupLocation="CenterScreen"
+                            Background="{DynamicResource MaterialDesignPaper}" FontFamily="Segoe UI Semibold" WindowStartupLocation="CenterScreen" ResizeMode="NoResize" WindowStyle="None" MouseDown="MainPackWindow_MouseDown"
                             >
     <Grid>
         <Grid.RowDefinitions>
@@ -20,40 +20,42 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
 
-        <materialDesign:ColorZone
+        <materialDesign:ColorZone x:Name="TitleColorZone"
             Grid.Row="0"
           Mode="PrimaryDark"
           Padding="16"
           CornerRadius="3"
           materialDesign:ShadowAssist.ShadowDepth="Depth3"
-          Margin="2">
+          Margin="2" MouseDown="TitleColorZone_MouseDown">
             <Grid>
                 <StackPanel HorizontalAlignment="Left" Orientation="Horizontal">
                     <Button x:Name="NewPackButton" HorizontalAlignment="Left" Margin="0 0 15 0"
                       Style="{StaticResource MaterialDesignFloatingActionLightButton}"
                       ToolTip="Create new pack" Click="NewPackButton_Click">
-                                        <materialDesign:PackIcon
+                        <materialDesign:PackIcon
                         Kind="PencilAdd"
                         Height="24"
                         Width="24" />
                     </Button>
                     <Button x:Name="LoadPackButton" HorizontalAlignment="Left"
                       Style="{StaticResource MaterialDesignFloatingActionMiniButton}"
-                      ToolTip="Load pack">
+                      ToolTip="Load pack" Click="LoadPackButton_Click">
                         <materialDesign:PackIcon
                         Kind="Folder"
                         Height="24"
                         Width="24" />
                     </Button>
-
                 </StackPanel>
-                <StackPanel HorizontalAlignment="Right"
-                Orientation="Horizontal">
-                <TextBlock
-                  VerticalAlignment="Center"
-                  Margin="16 0 0 0" Text="{Binding Path=TitleText}" FontSize="26"/>
-            </StackPanel>
-                
+                <TextBlock HorizontalAlignment="Center"
+                      VerticalAlignment="Center"
+                      Margin="0 0 5 0" Text="{Binding Path=TitleText}" FontSize="26"/>
+
+                <Button x:Name="CloseAppButton" HorizontalAlignment="Right"
+                    Style="{StaticResource MaterialDesignRaisedAccentButton}"
+                    ToolTip="Close" Click="CloseAppButton_Click">
+                    <materialDesign:PackIcon
+                        Kind="Close"/>
+                </Button>
             </Grid>
         </materialDesign:ColorZone>
 
