--- a/EmojiPacker/Views/CreateView.xaml
+++ b/EmojiPacker/Views/CreateView.xaml
@@ -25,28 +25,39 @@
                             </Grid.RowDefinitions>
                             <materialDesign:Card MinHeight="60" Background="{DynamicResource PrimaryHueDarkBrush}" Margin="0 0 0 15">
                                 <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
-                                    <TextBox Text="{Binding Path=CurrentPack.Name}" FontSize="20" TextAlignment="Center"/>
+                                    <TextBox MinWidth="100" materialDesign:HintAssist.Hint="Pack name" Text="{Binding Path=CurrentPack.Name}" FontSize="20" TextAlignment="Center"/>
                                     <!--<TextBlock Text="{Binding Path=CurrentPack.Count, StringFormat='Emoji Count: {0}', Mode=OneWay}" FontSize="16" TextAlignment="Center"/>-->
                                 </StackPanel>
                             </materialDesign:Card>
 
 
                             <ScrollViewer Grid.Row="1" HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">
-                                <ListBox HorizontalContentAlignment="Stretch"
+                                <ListBox x:Name="listBox" HorizontalContentAlignment="Stretch"
                                 ItemsSource="{Binding CurrentPack.Emojis, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:CreateView}}}" >
                                     <ListBox.ItemTemplate>
                                         <DataTemplate>
                                             <materialDesign:Card Padding="3">
                                                 <Grid>
                                                     <StackPanel Orientation="Vertical">
-                                                        <Image gif:ImageBehavior.AnimatedSource="{Binding Url}" MaxHeight="50" MaxWidth="50" HorizontalAlignment="Right"/>
+                                                        <Button x:Name="RemoveEmojiButton"  Command="{Binding Path=DataContext.RemoveEmoji,RelativeSource={RelativeSource AncestorType={x:Type local:CreateView}}}"
+                                                            Style="{StaticResource MaterialDesignRaisedAccentButton}"
+                                                            HorizontalAlignment="Right"
+                                                            ToolTip="Remove" CommandParameter="{Binding DataContext, RelativeSource={RelativeSource Self}}" >
+                                                            <materialDesign:PackIcon
+                                                                Kind="Close"
+                                                                Height="16"
+                                                                Width="16" />
+                                                        </Button>
                                                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" >
                                                             <TextBlock Text="Name:" FontWeight="Bold" FontSize="14" TextAlignment="Center" VerticalAlignment="Center" Margin="0,0,7,0"/>
                                                             <TextBox materialDesign:HintAssist.Hint="Name to be used as the tag" MinWidth="75" Text="{Binding Name}" FontWeight="Bold" FontSize="14" TextAlignment="Left" VerticalAlignment="Center" Foreground="#FFE29000"/>
                                                         </StackPanel>
-                                                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" >
-                                                            <TextBlock Text="Url:" FontWeight="Bold" FontSize="14" TextAlignment="Center" VerticalAlignment="Center" Margin="0,0,7,0"/>
-                                                            <TextBox AllowDrop="True" materialDesign:HintAssist.Hint="Url of the image" MinWidth="75" Text="{Binding Url}" FontWeight="Bold" FontSize="14" TextAlignment="Left" VerticalAlignment="Center" Foreground="#FFE29000" TextChanged="TextBox_TextChanged_1" Drop="TextBox_Drop" PreviewDrop="TextBox_PreviewDrop"/>
+                                                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch">
+                                                            <TextBlock Text="Url:" FontWeight="Bold" FontSize="14" TextAlignment="Center" VerticalAlignment="Center" Margin="0,0,7,0" HorizontalAlignment="Left"/>
+                                                            <TextBox AllowDrop="True" materialDesign:HintAssist.Hint="Url of the image" MinWidth="75" Text="{Binding Url}" FontWeight="Bold" 
+                                                                     FontSize="14" TextAlignment="Left" VerticalAlignment="Center" Foreground="#FFE29000" TextChanged="TextBox_TextChanged_1"
+                                                                     Drop="TextBox_Drop" PreviewDrop="TextBox_PreviewDrop" HorizontalAlignment="Left"/>
+                                                            <Image gif:ImageBehavior.AnimatedSource="{Binding Url}" MaxHeight="50" MaxWidth="50" HorizontalAlignment="Right" Margin="15 0 0 0 "/>
                                                         </StackPanel>
                                                     </StackPanel>
                                                 </Grid>
