--- a/EmojiPacker/Views/CreateView.xaml
+++ b/EmojiPacker/Views/CreateView.xaml
@@ -1,4 +1,4 @@
-﻿<local:BaseView x:Class="EmojiPacker.Views.CreateView"
+﻿<local:BaseView x:Name="baseView" x:Class="EmojiPacker.Views.CreateView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"                
@@ -32,43 +32,93 @@
 
 
                             <ScrollViewer Grid.Row="1" HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">
-                                <ListBox x:Name="listBox" HorizontalContentAlignment="Stretch"
-                                ItemsSource="{Binding CurrentPack.Emojis, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:CreateView}}}" >
-                                    <ListBox.ItemTemplate>
+                                <ItemsControl ItemsSource="{Binding CurrentPack.Emojis, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:CreateView}}}">
+                                    <ItemsControl.ItemsPanel>
+                                        <ItemsPanelTemplate>
+                                            <UniformGrid Columns="3" />
+                                        </ItemsPanelTemplate>
+                                    </ItemsControl.ItemsPanel>
+                                    <ItemsControl.ItemTemplate>
                                         <DataTemplate>
-                                            <materialDesign:Card Padding="3">
-                                                <Grid>
-                                                    <StackPanel Orientation="Vertical">
-                                                        <Button x:Name="RemoveEmojiButton"  Command="{Binding Path=DataContext.RemoveEmoji,RelativeSource={RelativeSource AncestorType={x:Type local:CreateView}}}"
+                                            <materialDesign:Flipper
+                                                Style="{StaticResource MaterialDesignCardFlipper}"
+                                                VerticalAlignment="Top" HorizontalAlignment="Center">
+                                                <materialDesign:Flipper.FrontContent >
+                                                    <Grid>
+                                                        <Button
+                                                            Style="{StaticResource MaterialDesignFlatMidBgButton}"
+                                                            Command="{x:Static materialDesign:Flipper.FlipCommand}"
+                                                            Margin="3" Height="85" Width="85" Background="{x:Null}" Padding="0">                                                            
+                                                        <Image Height="75" Width="75"  gif:ImageBehavior.AnimatedSource="{Binding Url}" HorizontalAlignment="Center" VerticalAlignment="Center" Stretch="UniformToFill"/> 
+                                                        </Button>                                                       
+                                                    </Grid>
+                                                </materialDesign:Flipper.FrontContent>
+                                                <materialDesign:Flipper.BackContent>
+                                                    <Grid
+                                                        Height="210"
+                                                        Width="200">
+                                                        <Grid.RowDefinitions>
+                                                            <RowDefinition
+                                                                Height="Auto" />
+                                                            <RowDefinition
+                                                                Height="*" />
+                                                        </Grid.RowDefinitions>
+                                                        <StackPanel Orientation="Vertical" VerticalAlignment="Stretch" Margin="0 0 0 3">
+                                                            <materialDesign:ColorZone                                                            
+                                                            Padding="6">
+                                                                <StackPanel
+                                                                Orientation="Horizontal">
+                                                                    <Button
+                                                                    Style="{StaticResource MaterialDesignToolForegroundButton}"
+                                                                    Command="{x:Static materialDesign:Flipper.FlipCommand}"
+                                                                    HorizontalAlignment="Left">
+                                                                        <materialDesign:PackIcon
+                                                                      Kind="ArrowLeft"
+                                                                      HorizontalAlignment="Right" />
+                                                                    </Button>
+                                                                    <TextBlock
+                                                                    Margin="8 0 0 0"
+                                                                    VerticalAlignment="Center">
+                                                                    EDIT EMOJI
+                                                                    </TextBlock>
+                                                                </StackPanel>
+                                                            </materialDesign:ColorZone>
+                                                            <Grid
+                                                            Grid.Row="1"
+                                                            Margin="0 6 0 0"
+                                                            HorizontalAlignment="Center"
+                                                            VerticalAlignment="Top"
+                                                            Width="172">
+                                                                <Grid.RowDefinitions>
+                                                                    <RowDefinition />
+                                                                    <RowDefinition />
+                                                                </Grid.RowDefinitions>
+                                                                <TextBox
+                                                                materialDesign:HintAssist.Hint="Emoji Name"
+                                                                materialDesign:HintAssist.IsFloating="True"
+                                                                Margin="0 12 0 0" Text="{Binding Name}"/>
+                                                                <TextBox
+                                                                Grid.Row="1"
+                                                                materialDesign:HintAssist.Hint="Emoji Url"
+                                                                materialDesign:HintAssist.IsFloating="True"
+                                                                Margin="0 12 0 0" Text="{Binding Url}"/>
+                                                            </Grid>
+                                                            <Button x:Name="RemoveEmojiButton" Command="{Binding Path=DataContext.RemoveEmoji, Source={x:Reference baseView}}"
                                                             Style="{StaticResource MaterialDesignRaisedAccentButton}"
-                                                            HorizontalAlignment="Right"
+                                                            HorizontalAlignment="Stretch" VerticalAlignment="Bottom" Margin="3 15 3 0"
                                                             ToolTip="Remove" CommandParameter="{Binding DataContext, RelativeSource={RelativeSource Self}}" >
-                                                            <materialDesign:PackIcon
-                                                                Kind="Close"
-                                                                Height="16"
-                                                                Width="16" />
-                                                        </Button>
-                                                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" >
-                                                            <TextBlock Text="Name:" FontWeight="Bold" FontSize="14" TextAlignment="Center" VerticalAlignment="Center" Margin="0,0,7,0"/>
-                                                            <TextBox materialDesign:HintAssist.Hint="Name to be used as the tag" MinWidth="75" Text="{Binding Name}" FontWeight="Bold" FontSize="14" TextAlignment="Left" VerticalAlignment="Center" Foreground="#FFE29000"/>
+                                                                <TextBlock FontWeight="Bold" FontSize="14" Text="REMOVE"/>
+                                                            </Button>
                                                         </StackPanel>
-                                                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch">
-                                                            <TextBlock Text="Url:" FontWeight="Bold" FontSize="14" TextAlignment="Center" VerticalAlignment="Center" Margin="0,0,7,0" HorizontalAlignment="Left"/>
-                                                            <TextBox AllowDrop="True" materialDesign:HintAssist.Hint="Url of the image" MinWidth="75" Text="{Binding Url}" FontWeight="Bold" 
-                                                                     FontSize="14" TextAlignment="Left" VerticalAlignment="Center" Foreground="#FFE29000" TextChanged="TextBox_TextChanged_1"
-                                                                     Drop="TextBox_Drop" PreviewDrop="TextBox_PreviewDrop" HorizontalAlignment="Left"/>
-                                                            <Image gif:ImageBehavior.AnimatedSource="{Binding Url}" MaxHeight="50" MaxWidth="50" HorizontalAlignment="Right" Margin="15 0 0 0 "/>
-                                                        </StackPanel>
-                                                    </StackPanel>
-                                                </Grid>
-                                            </materialDesign:Card>
+                                                    </Grid>
+                                                </materialDesign:Flipper.BackContent>
+                                            </materialDesign:Flipper>
                                         </DataTemplate>
-                                    </ListBox.ItemTemplate>
-
-                                </ListBox>
+                                    </ItemsControl.ItemTemplate>
+                                </ItemsControl>
                             </ScrollViewer>
                         </Grid>
-                    </Border>                    
+                    </Border>
                     <Border Grid.Row="1" Padding="5 0 0 5">
                         <Grid>
                             <Grid.ColumnDefinitions>
@@ -104,7 +154,7 @@
                             </StackPanel>
                             <materialDesign:Card x:Name="DragDropCard" UniformCornerRadius="10" Drop="DragDropCard_Drop" AllowDrop="True">
                                 <Border Padding="10">
-                                    <Grid>                                    
+                                    <Grid>
                                         <Rectangle RadiusX="9" RadiusY="9" Fill="#00B2B2B2" Stroke="#FFB2B2B2" StrokeDashArray="1,2" StrokeThickness="2"/>
                                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                                             <TextBlock Text="Drag and Drop " FontWeight="Bold" FontSize="16" VerticalAlignment="Center" Foreground="#FFB2B2B2"/>
