Added minimize button; Removed Top-Most setting; Added minimal scrollbar style

--- a/EmojiPacker/Views/CreateView.xaml
+++ b/EmojiPacker/Views/CreateView.xaml
@@ -33,7 +33,9 @@
                             </materialDesign:Card>
 
 
-                            <ScrollViewer Grid.Row="1" HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">
+                            <ScrollViewer 
+                                Grid.Row="1" 
+                                HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">
                                 <ItemsControl x:Name="listBox" HorizontalContentAlignment="Center" VerticalContentAlignment="Top" VerticalAlignment="Top" HorizontalAlignment="Center"
                                 ItemsSource="{Binding CurrentPack.Emojis, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:CreateView}}}" >
                                     <ItemsControl.ItemTemplate>
@@ -128,6 +130,9 @@
                 </Grid>
             </materialDesign:Card>
         </Border>
+        
+        
+        
     </Grid>
 
 
