--- a/EmojiPacker/MainWindow.xaml
+++ b/EmojiPacker/MainWindow.xaml
@@ -5,14 +5,14 @@
                             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                             xmlns:system="clr-namespace:System;assembly=mscorlib"
-                            xmlns:local="clr-namespace:EmojiPacker" xmlns:views="clr-namespace:EmojiPacker.Views"
+                            xmlns:local="clr-namespace:EmojiPacker" xmlns:views="clr-namespace:EmojiPacker.Views" xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
         mc:Ignorable="d" Height="743" Width="819.272"
                             TextElement.Foreground="{DynamicResource MaterialDesignBody}"
                             TextElement.FontWeight="Regular"
                             TextElement.FontSize="13"
                             TextOptions.TextFormattingMode="Ideal" 
                             TextOptions.TextRenderingMode="Auto"        
-                            Background="{DynamicResource MaterialDesignPaper}" FontFamily="Segoe UI Semibold" WindowStartupLocation="CenterScreen" ResizeMode="NoResize" WindowStyle="None" MouseDown="MainPackWindow_MouseDown" Topmost="True"
+                            Background="{DynamicResource MaterialDesignPaper}" FontFamily="Segoe UI Semibold" WindowStartupLocation="CenterScreen" ResizeMode="NoResize" WindowStyle="None" MouseDown="MainPackWindow_MouseDown"
                             >
     <Grid>
         <Grid.RowDefinitions>
@@ -49,17 +49,23 @@
                 <TextBlock HorizontalAlignment="Center"
                       VerticalAlignment="Center"
                       Margin="0 0 5 0" Text="{Binding Path=TitleText}" FontSize="26"/>
-
-                <Button x:Name="CloseAppButton" HorizontalAlignment="Right"
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                <Button x:Name="MinimizeAppButton" HorizontalAlignment="Right" Margin="0 0 10 0"
+                    Style="{StaticResource MaterialDesignRaisedAccentButton}"
+                    ToolTip="Close" Click="MinimizeAppButton_Click">
+                    <materialDesign:PackIcon
+                        Kind="WindowMinimize"/>
+                    </Button>
+                <Button x:Name="CloseAppButton"
                     Style="{StaticResource MaterialDesignRaisedAccentButton}"
                     ToolTip="Close" Click="CloseAppButton_Click">
                     <materialDesign:PackIcon
                         Kind="Close"/>
                 </Button>
+                </StackPanel>
             </Grid>
         </materialDesign:ColorZone>
 
         <Border Grid.Row="1" Padding="7" x:Name="ContentViewer"/>
     </Grid>
-
 </Window>
